# websocket

./: .gitignore  Cargo.toml  build.sh  readme.md  run.sh
actor/: client.rs  hub.rs  main.rs  models.rs
note/: ch1.md  ch2.md  ch3.md
press_test/: Cargo.toml  config.toml  readme.md
press_test/logs/: press_test.log.2025-11-17
press_test/reports/: 2025-11-17_22-46-34_Step_1__Low_Concurrency_Baseline_50c_21s.json  2025-11-17_22-47-04_Step_2__High_Throughput_Test_250c_30s.json
press_test/src/: client.rs  config.rs  main.rs  metrics.rs
src/: main.rs  test.rs  test1.rs
src/auth/: username.rs
src/connection/: client.rs  mod.rs
src/message/: broadcast.rs
src/utils/: color.rs
