[package]
name = "chat_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } # <-- 修复 1: 启用 env-filter
serde = { version = "1", features = ["derive"] }
toml = "0.8"